--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   line-height: 1.5;
   background-color: #221e32;
+  color: #ffffff;
 }
 h1,
 h2,
