--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import-normalize; /* bring in normalize.css styles */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
